Fixed bookmarks toolbar overflowing the top panel (https://github.com/zen-browser/desktop/issues/2434)

--- a/src/browser/base/content/zen-styles/zen-browser-ui.css
+++ b/src/browser/base/content/zen-styles/zen-browser-ui.css
@@ -75,6 +75,7 @@
 
 #zen-appcontent-wrapper {
   max-width: 100%;
+  overflow-x: hidden;
 }
 
 #tabbrowser-tabbox {
